--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,17 @@
             }
         }
     },
+    "overrides": [
+        {
+            "files": [
+                "**/*.test.tsx",
+                "**/*.test.ts"
+            ],
+            "env": {
+                "jest": true
+            }
+        }
+    ],
     "rules": {
         "comma-dangle": "off", // https://eslint.org/docs/rules/comma-dangle
         "function-paren-newline": "off", // https://eslint.org/docs/rules/function-paren-newline
